Code cleanup (compiler warnings, unused code)